--- a/Assignments/Tailwind/Project 01/index.html
+++ b/Assignments/Tailwind/Project 01/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <!-- tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/f8db6cb05a.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>VS Code Clone</title>
 </head>
 <body>
     <!-- Nav-bar -->
