--- a/Assignments/Tailwind/Project 01/index.html
+++ b/Assignments/Tailwind/Project 01/index.html
@@ -89,7 +89,7 @@
 
     <!-- Feedback -->
     <div class="bg-[#F5F5F5] flex justify-center items-center">
-        <div class="my-24 flex justify-center items-center">
+        <div class="my-24 flex justify-center ">
             <img class="w-4 mr-3" src="./assets/Cheron_left.svg" alt="left">
             <div class="flex justify-center">
                 <div class="mr-4">
@@ -178,7 +178,7 @@
                 <p class="text-slate-600 text-[18px] mt-8  w-[620px] leading-10">Want even more features? Install extensions to add new languages, themes, debuggers, and to connect to additional services. Extensions run in separate processes, ensuring they won't slow down your editor. <span class="text-[#0071bc] cursor-pointer">Learn more about extensions.</span></p>
             </div>
             <div>
-                <img class="w-[380px]" src="./assets/Hundreds-of-Extensions.png" alt="">
+                <img class="w-[350px]" src="./assets/Hundreds-of-Extensions.png" alt="">
             </div>
         </div>
     </div>
