--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -7,6 +7,9 @@
     <!-- style-sheet -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Iconify -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+
     <!-- Google_fonts- Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,7 +20,7 @@
     <!-- Nav-bar -->
     <nav>
         <div class="navbar">
-            <img src="./Assets/Icons/Logo.svg" alt="">
+            <img class= "logo" src="./Assets/Icons/Logo.svg" alt="">
             <div class="list">
                 <ul>
                     <li>Home</li>
@@ -29,15 +32,34 @@
             <div class="nav_right">
                 <div class="eng">
                     <p>Eng</p>
-                    <img src="" alt="">
+                    <img class="dropdown" src="./Assets/Icons/Vector.svg" alt="dropdown">
                 </div>
+                <img class="button_pink" src="./Assets/Icons/btn-pink-bg.svg" alt="btn-pink-bg">
                 <p>Contact Us</p>
         </div>
     </nav>
 
     <!-- Hero-section -->
-    <main>
-        
+    <main class="main">
+        <div class="leftside">
+            <h1>Simplify All Transactions in <span>One Card</span></h1>
+            <p>Hurry up and join now, with this you can manage your daily finances easily and safely.</p>
+            <div class="getstarted">
+                <img src="" alt="">
+                <span>GET SATRTED</span>
+                <img src="" alt="">
+            </div>
+            <div class="plus">
+                <span>42K <span class="purple">+</span></span>
+                <span>Happy Active User</span>
+                <span class="line"></span>
+                <span>12K <span class="purple">+</span></span>
+                <span>Years Experience</span>
+            </div>
+        </div>
+        <div class="rightside">
+            <img src="./Assets/Photos/frontCards.png" alt="frontCards">
+        </div>
     </main>
 </body>
 </html>
