--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -42,12 +42,14 @@
     <!-- Hero-section -->
     <main class="main">
         <div class="leftside">
-            <h1>Simplify All Transactions in <span>One Card</span></h1>
+            <div class="heading">
+            <span>Simplify All Transactions in <span>One Card</span></span>
             <p>Hurry up and join now, with this you can manage your daily finances easily and safely.</p>
+            </div>
             <div class="getstarted">
-                <img src="" alt="">
-                <span>GET SATRTED</span>
-                <img src="" alt="">
+                <img class="btnpink" src="./Assets/Icons/btn-pink-bg.svg" alt="pinkbtn">
+                <span>GET STARTED</span>
+                <img class="rightarrow" src="./Assets/Icons/RightArrow.svg" alt="RightArrow">
             </div>
             <div class="plus">
                 <span>42K <span class="purple">+</span></span>
@@ -58,8 +60,13 @@
             </div>
         </div>
         <div class="rightside">
-            <img src="./Assets/Photos/frontCards.png" alt="frontCards">
+            <img class="backcards" src="./Assets/Photos/backCards.png" alt="backCards">
+            <img class="frontcards" src="./Assets/Photos/frontCards.png" alt="frontCards">
         </div>
     </main>
+
+    <div class="section2">
+
+    </div>
 </body>
 </html>
