--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -40,7 +40,7 @@
     </nav>
 
     <!-- Hero-section -->
-    <main class="main">
+    <div class="main">
         <div class="leftside">
             <div class="heading">
             <span>Simplify All Transactions in <span>One Card</span></span>
@@ -52,20 +52,50 @@
                 <img class="rightarrow" src="./Assets/Icons/RightArrow.svg" alt="RightArrow">
             </div>
             <div class="plus">
-                <span>42K <span class="purple">+</span></span>
-                <span>Happy Active User</span>
+                <span class="lgtext">42K <span class="purple">+</span></span>
+                <span class="shorttext">Happy Active User</span>
                 <span class="line"></span>
-                <span>12K <span class="purple">+</span></span>
-                <span>Years Experience</span>
+                <span  class="lgtext">12K <span class="purple">+</span></span>
+                <span class="shorttext">Years Experience</span>
             </div>
         </div>
         <div class="rightside">
             <img class="backcards" src="./Assets/Photos/backCards.png" alt="backCards">
             <img class="frontcards" src="./Assets/Photos/frontCards.png" alt="frontCards">
         </div>
-    </main>
+    </div>
 
+    <!-- Section 2 -->
     <div class="section2">
+        <div class="sec_img">
+            <img src="./Assets/Icons/Logo.svg" alt="img">
+            <img src="./Assets/Icons/Logo.svg" alt="img">
+            <img src="./Assets/Icons/Logo.svg" alt="img">
+            <img src="./Assets/Icons/Logo.svg" alt="img">
+            <img src="./Assets/Icons/Logo.svg" alt="img">
+        </div>
+    </div>
+
+    <!-- Section 3 -->
+    <div class="section3">
+        <div class="sec_heading3">
+            <span>The best payment service for <span class="purple_sec3">your transactions.</span></span>
+            <p>The following are the services we provide to users, with the services we maximize it is hoped that users are satisfied with what we provide.</p>
+        </div>
+        <div class="cards">
+            <div class="card1">
+                <img src="./Assets/Icons/dollar-circle.svg" alt="dollar">
+                <p>Free transaction fee</p>
+            </div>
+            <div class="card2">
+                <img src="./Assets/Icons/cloud-add.svg" alt="cloud-add">
+                <p>Easy to access anytime and anywhere</p>
+            </div>
+            <div class="card3">
+                <img src="./Assets/Icons/lock.svg" alt="lock">
+                <p>Guaranteed Safety</p>
+            </div>
+        </div>
 
     </div>
 </body>
