--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -80,23 +80,70 @@
     <div class="section3">
         <div class="sec_heading3">
             <span>The best payment service for <span class="purple_sec3">your transactions.</span></span>
-            <p>The following are the services we provide to users, with the services we maximize it is hoped that users are satisfied with what we provide.</p>
+            <p class="cardfont">The following are the services we provide to users, with the services we maximize it is hoped that users are satisfied with what we provide.</p>
         </div>
         <div class="cards">
             <div class="card1">
-                <img src="./Assets/Icons/dollar-circle.svg" alt="dollar">
-                <p>Free transaction fee</p>
+                <img class="cardimg" src="./Assets/Icons/dollar-circle.svg" alt="dollar">
+                <p class="cardfont">Free transaction fee</p>
             </div>
             <div class="card2">
-                <img src="./Assets/Icons/cloud-add.svg" alt="cloud-add">
-                <p>Easy to access anytime and anywhere</p>
+                <img class="cardimg" src="./Assets/Icons/cloud-add.svg" alt="cloud-add">
+                <p class="cardfont">Easy to access anytime and anywhere</p>
             </div>
             <div class="card3">
-                <img src="./Assets/Icons/lock.svg" alt="lock">
-                <p>Guaranteed Safety</p>
+                <img class="cardimg" src="./Assets/Icons/lock.svg" alt="lock">
+                <p class="cardfont">Guaranteed Safety</p>
             </div>
         </div>
-
     </div>
+
+    <!-- Section 4 -->
+    <div class="section4">
+        <h2>Unique and interesting <span>card choices</span></h2>
+        <p>We provide card editing Features, where users can edit unique cards according to the wishes and preferences of the users themselves.</p>
+        <img src="./Assets/Photos/VCards.png" alt="VCards">
+    </div>
+
+    <!-- Section 5 -->
+    <div class="section5">
+        <h2>Customers are satisfied with <span>the features</span> we provide</h2>
+        <p>With the various features that we provide, therefore many Customers like the features that we provide</p>
+        <div class="card4">
+            <div class="card01">
+                <img class="star" src="./Assets/Icons/5stars.svg" alt="5stars">
+                <p class="sentence">This is the best finance platform I've found, lots of features that definitely make me more satisfied!</p>
+                <span class="name">Melvin Yoga</span>
+                <span class="place">New York, America</span>
+            </div>
+            <div class="card02">
+                <img class="star" src="./Assets/Icons/4stars.svg" alt="5stars">
+                <p class="sentence">Very good and recommended financial platform, the features are very satisfying, you all should try this platform!</p>
+                <span class="name">Gabriel Putra</span>
+                <span class="place">Jakarta, Indonesia</span>
+            </div>
+            <div class="card03">
+                <img class="star" src="./Assets/Icons/4stars.svg" alt="5stars">
+                <p class="sentence">This is the first time I have found a financial platform as good as this, with various features that really help me in managing my finances.</p>
+                <span class="name">Farhan Putra</span>
+                <span class="place">Paris, French</span>
+            </div>
+            <div class="card04">
+                <img class="star" src="./Assets/Icons/5stars.svg" alt="5stars">
+                <p class="sentence">The best financial platform I've ever founc, here we can custom cards according to our wishes, I'm very satisfied!</p>
+                <span class="name">Alex Georgia</span>
+                <span class="place">Wangon, Indonesia</span>
+            </div>
+        </div>
+        <div class="navigation">
+            <div class="purpline"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </div>
+
+    <!-- section 6 -->
+    
 </body>
 </html>
