--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -144,6 +144,18 @@
     </div>
 
     <!-- section 6 -->
-    
+    <div class="section6">
+        <img class="img1" src="./Assets/Photos/Rectangle 6773.png" alt="Rectangle">
+        <img class="img2" src="./Assets/Photos/Rectangle 6774.png" alt="Rectangle">
+        <img class="diamond_left" src="./Assets/Photos/Diamond-left.png" alt="Diamond-left">
+        <img class="diamond_right" src="./Assets/Photos/Diamond-right.png" alt="Diamond-right">
+        <p>Let's start <span>customing</span> your card now</p>
+        <div class="getstarted">
+            <img class="btnpink" src="./Assets/Icons/btn-pink-bg.svg" alt="pinkbtn">
+            <span>GET STARTED</span>
+            <img class="rightarrow" src="./Assets/Icons/RightArrow.svg" alt="RightArrow">
+        </div>
+    </div>
+
 </body>
 </html>
