--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -150,12 +150,24 @@
         <img class="diamond_left" src="./Assets/Photos/Diamond-left.png" alt="Diamond-left">
         <img class="diamond_right" src="./Assets/Photos/Diamond-right.png" alt="Diamond-right">
         <p>Let's start <span>customing</span> your card now</p>
-        <div class="getstarted">
-            <img class="btnpink" src="./Assets/Icons/btn-pink-bg.svg" alt="pinkbtn">
+        <div class="getstarted_sec6">
+            <img class="btnpink_sec6" src="./Assets/Icons/btn-pink-bg.svg" alt="pinkbtn">
             <span>GET STARTED</span>
-            <img class="rightarrow" src="./Assets/Icons/RightArrow.svg" alt="RightArrow">
+            <img class="rightarrow_sec6" src="./Assets/Icons/RightArrow.svg" alt="RightArrow">
         </div>
     </div>
 
+    <!-- section 7 -->
+    <div class="footer">
+        <img class= "footer_logo" src="./Assets/Icons/Logo.svg" alt="">
+        <div class="footer_list">
+            <ul>
+                <li>Branding</li>
+                <li>Contact Us</li>
+                <li>Pricing</li>
+                <li>About us</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
