--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <title>Hosting Landing</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <img src="./assets/Logo.svg" alt="Logo">
+        <ul>
+            <li>Hosting</li>
+            <li>Domain</li>
+            <li>Features</li>
+            <li>Support</li>
+            <li>Community</li>
+        </ul>
+        <button class="login">Login</button>
+    </div>
+
+    <div class="main">
+        <div class="left">
+            <h1>The best and <span>cheapest</span> hosting for your website</h1>
+            <p>Hosting your website here is easy, access is fast, server security is very well maintained, and of course supported by reliable servers.</p>
+            <div class="button_grp">
+                <button class="blue_btn">Get Started</button>
+                <button class="grey_btn">Try Start Free</button>
+            </div>
+        </div>
+        <div class="right">
+            <img src="./assets/Illustrations/Group 238502.svg" alt="Group">
+        </div>
+    </div>
 </body>
 </html>
