--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -40,5 +40,34 @@
             <img src="./assets/Illustrations/Group 238502.svg" alt="Group">
         </div>
     </div>
+
+    <div class="info_bar">
+        <img class="logo_light" src="./assets/Logo-light.svg" alt="Logo-light">
+        <img class="logo_light" src="./assets/Logo-light.svg" alt="Logo-light">
+        <img class="logo_light" src="./assets/Logo-light.svg" alt="Logo-light">
+        <img class="logo_light" src="./assets/Logo-light.svg" alt="Logo-light">
+    </div>
+
+    <div class="service">
+        <h2>The best service especially for you</h2>
+        <p>We will serve you as best we can with aim of providing satisfaction to you.</p>
+        <div class="cards">
+            <div class="card1">
+                <img src="./assets/Icons/fast.svg" alt="fast">
+                <h3 class="head_card">Faster hosting process</h3>
+                <p class="para_card">We can speed up the creation of your website, which is made directly by the experts.</p>
+            </div>
+            <div class="card2">
+                <img src="./assets/Icons/signal.svg" alt="single">
+                <h3 class="head_card">Speed to access faster</h3>
+                <p class="para_card">Excellent network infrastructure and hardware to support fast and stable access.</p>
+            </div>
+            <div class="card3">
+                <img src="./assets/Icons/heart.svg" alt="heart">
+                <h3 class="head_card">Faster Service 24/7</h3>
+                <p class="para_card">We have a response time of less than 150 seconds, available 24 hours a day.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
