--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -69,5 +69,67 @@
             </div>
         </div>
     </div>
+
+    <div class="support">
+        <h2>We are ready to support your business needs to be more advanced</h2>
+        <div class="list_supp">
+            <div class="list_1">
+                <div class="list1">
+                    <span class="para_list">Our main features</span>
+                    <img class="icon" src="./assets/Icons/Group 238511.svg" alt="minus">
+                </div>
+                <div class="list">
+                    <span class="para_list">Speed optimization</span>
+                    <img class="icon" src="./assets/Icons/Group 238512.svg" alt="plus">
+                </div>
+                <div class="list">
+                    <span class="para_list">Downtime and security optimization</span>
+                    <img class="icon" src="./assets/Icons/Group 238512.svg" alt="plus">
+                </div>
+                <div class="list">
+                    <span class="para_list">Additional features</span>
+                    <img class="icon" src="./assets/Icons/Group 238512.svg" alt="plus">
+                </div>
+                <div class="list">
+                    <span class="para_list">Best technical support service</span>
+                    <img class="icon" src="./assets/Icons/Group 238512.svg" alt="plus">
+                </div>
+            </div>
+            <div class="list_2">
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Number of Websites</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Number of Email Accounts</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Unlimited MySQL Databases</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Unlimited Bandwidth</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Unlimited Sub & Parked Domain</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">30 Days Unconditional Guarantee</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Free Domain</span>
+                </div>
+                <div class="dark_list">
+                    <div class="circle"></div>
+                    <span class="dark_text">Disk Space</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
