--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -131,5 +131,50 @@
             </div>
         </div>
     </div>
+
+    <div class="pricing">
+        <h2>Hosting your website with the services we provide</h2>
+        <div class="arrow">
+            <img class="left_arrow" src="./assets/Icons/arrow-left.svg" alt="left_arrow">
+            <img class="right_arrow" src="./assets/Icons/arrow-right.svg" alt="arrow-right">
+        </div>
+        <div class="cards">
+            <div class="card1">
+                <span>Regular</span>
+                <span>$8,9 <span>/month</span></span>
+                <span>Suitable for you who will build a website and others.</span>
+                <div class="line"></div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Upto to 16,000 Vistors/Month</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>500MB SSD Disk Space</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Unlimited Bandwidth</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Unlimited Databases</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Instant Backup</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>1 Email Account</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>1 Domain</span>
+                </div>
+                <button>Select</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
