--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -134,16 +134,14 @@
 
     <div class="pricing">
         <h2>Hosting your website with the services we provide</h2>
-        <div class="arrow">
             <img class="left_arrow" src="./assets/Icons/arrow-left.svg" alt="left_arrow">
             <img class="right_arrow" src="./assets/Icons/arrow-right.svg" alt="arrow-right">
-        </div>
         <div class="cards">
-            <div class="card1">
-                <span>Regular</span>
-                <span>$8,9 <span>/month</span></span>
-                <span>Suitable for you who will build a website and others.</span>
-                <div class="line"></div>
+            <div class="cards1">
+                <span class="card_heading">Regular</span>
+                <span class="card_dollar">$8,9 <span class="card_month">/month</span></span>
+                <span class="card_sentence">Suitable for you who will build a website and others.</span>
+                <div class="card_line"></div>
                 <div class="check">
                     <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
                     <span>Upto to 16,000 Vistors/Month</span>
