--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -136,7 +136,7 @@
         <h2>Hosting your website with the services we provide</h2>
             <img class="left_arrow" src="./assets/Icons/arrow-left.svg" alt="left_arrow">
             <img class="right_arrow" src="./assets/Icons/arrow-right.svg" alt="arrow-right">
-        <div class="cards">
+        <div class="cards_pricing">
             <div class="cards1">
                 <span class="card_heading">Regular</span>
                 <span class="card_dollar">$8,9 <span class="card_month">/month</span></span>
@@ -170,9 +170,86 @@
                     <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
                     <span>1 Domain</span>
                 </div>
-                <button>Select</button>
+                <button class="card_btn">Select</button>
+            </div>
+
+            <div class="cards2">
+                <span class="card_heading">Regular</span>
+                <span class="card_dollar">$8,9 <span class="card_month">/month</span></span>
+                <span class="card_sentence">Suitable for you who will build a website and others.</span>
+                <div class="card_line"></div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>Upto to 16,000 Vistors/Month</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>500MB SSD Disk Space</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>Unlimited Bandwidth</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>Unlimited Databases</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>Instant Backup</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>1 Email Account</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
+                    <span>1 Domain</span>
+                </div>
+                <button class="card_btn">Select</button>
+            </div>
+    
+            <div class="cards3">
+                <span class="card_heading">Regular</span>
+                <span class="card_dollar">$8,9 <span class="card_month">/month</span></span>
+                <span class="card_sentence">Suitable for you who will build a website and others.</span>
+                <div class="card_line"></div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Upto to 16,000 Vistors/Month</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>500MB SSD Disk Space</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Unlimited Bandwidth</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Unlimited Databases</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>Instant Backup</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>1 Email Account</span>
+                </div>
+                <div class="check">
+                    <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
+                    <span>1 Domain</span>
+                </div>
+                <button class="card_btn">Select</button>
             </div>
         </div>
+        </div>
+
+        
+
+    </div>
     </div>
 </body>
 </html>
