--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -174,9 +174,9 @@
             </div>
 
             <div class="cards2">
-                <span class="card_heading">Regular</span>
-                <span class="card_dollar">$8,9 <span class="card_month">/month</span></span>
-                <span class="card_sentence">Suitable for you who will build a website and others.</span>
+                <span class="card_heading">Standard</span>
+                <span class="card_dollar">$12,9 <span class="card_month">/month</span></span>
+                <span class="card_sentence">Suitable for business, such as a website or management system for complaint.</span>
                 <div class="card_line"></div>
                 <div class="check">
                     <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
