--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -180,11 +180,11 @@
                 <div class="card_line"></div>
                 <div class="check">
                     <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
-                    <span>Upto to 16,000 Vistors/Month</span>
+                    <span>Upto to 36,000 Vistors/Month</span>
                 </div>
                 <div class="check">
                     <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
-                    <span>500MB SSD Disk Space</span>
+                    <span>Unlimited SSD Disk Space</span>
                 </div>
                 <div class="check">
                     <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
@@ -200,19 +200,19 @@
                 </div>
                 <div class="check">
                     <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
-                    <span>1 Email Account</span>
+                    <span>Unlimited Account</span>
                 </div>
                 <div class="check">
                     <img src="./assets/Icons/white-tick.svg" alt="blue-tick">
-                    <span>1 Domain</span>
+                    <span>Unlimited Addon Domain</span>
                 </div>
                 <button class="card_btn">Select</button>
             </div>
     
             <div class="cards3">
-                <span class="card_heading">Regular</span>
-                <span class="card_dollar">$8,9 <span class="card_month">/month</span></span>
-                <span class="card_sentence">Suitable for you who will build a website and others.</span>
+                <span class="card_heading">Premium</span>
+                <span class="card_dollar">$19,99 <span class="card_month">/month</span></span>
+                <span class="card_sentence">Suitable for those of you who need special physical server performance and security.</span>
                 <div class="card_line"></div>
                 <div class="check">
                     <img src="./assets/Icons/blue-tick.svg" alt="blue-tick">
@@ -246,10 +246,36 @@
             </div>
         </div>
         </div>
-
-        
-
     </div>
+
+    <div class="customers">
+        <div class="customer_heading">
+            <h2>What do our customers say?</h2>
+            <p>You will definitely be surprised how our customers comment on what we do so well, because we really prioritize the satisfaction of our customers.</p>
+        </div>
+        <div class="cards_customer">
+            <div class="cards_customer1">
+                <div class="vector">
+                    <img src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
+                    <img src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                </div>
+                <span class="customer_name">Slamet Wijayya</span>
+                <span class="card_desi">CEO Tokped</span>
+                <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
+                <img src="./assets/Icons/Star.svg" alt="star">
+            </div>
+
+            <div class="cards_customer2">
+                <div class="cards_customer1">
+                    <div class="vector">
+                        <img src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
+                        <img src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    </div>
+                    <span class="customer_name">Slamet Wijayya</span>
+                    <span class="card_desi">CEO Tokped</span>
+                    <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
+                    <img src="./assets/Icons/Star.svg" alt="star">
+            </div>
     </div>
 </body>
 </html>
