--- a/Javascript/Saturday (07-12-23)/index.html
+++ b/Javascript/Saturday (07-12-23)/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <script src="./object.js"></script>
-    <script src="./this.js"></script>
+    <!-- <script src="./object.js"></script> -->
+    <!-- <script src="./this.js"></script> -->
+
+    <script src="./object_create.js"></script>
 </head>
 <body>
     
