--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -248,7 +248,7 @@
         </div>
     </div>
 
-    <div class="customers">
+    <div class="customer">
         <div class="customer_heading">
             <h2>What do our customers say?</h2>
             <p>You will definitely be surprised how our customers comment on what we do so well, because we really prioritize the satisfaction of our customers.</p>
@@ -262,20 +262,32 @@
                 <span class="customer_name">Slamet Wijayya</span>
                 <span class="card_desi">CEO Tokped</span>
                 <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
-                <img src="./assets/Icons/Star.svg" alt="star">
-            </div>
-
-            <div class="cards_customer2">
-                <div class="cards_customer1">
-                    <div class="vector">
-                        <img src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
-                        <img src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
-                    </div>
-                    <span class="customer_name">Slamet Wijayya</span>
-                    <span class="card_desi">CEO Tokped</span>
-                    <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
+                <div class="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                </div>
             </div>
+            <div class="cards_customer2">
+                <div class="vector">
+                    <img src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
+                    <img src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                </div>
+                <span class="customer_name">Slamet Wijayya</span>
+                <span class="card_desi">CEO Tokped</span>
+                <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
+                <div class="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                </div>
+            </div>
+        </div>
+        <div class="scrollbar"></div>
     </div>
 </body>
 </html>
