--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -256,12 +256,12 @@
         <div class="cards_customer">
             <div class="cards_customer1">
                 <div class="vector">
-                    <img src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
-                    <img src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
                 </div>
-                <span class="customer_name">Slamet Wijayya</span>
-                <span class="card_desi">CEO Tokped</span>
-                <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
+                <p class="customer_name">Slamet Wijayya</p>
+                <p class="card_desi">CEO Tokped</p>
+                <p class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</p>
                 <div class="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
@@ -270,14 +270,14 @@
                     <img src="./assets/Icons/Star.svg" alt="star">
                 </div>
             </div>
-            <div class="cards_customer2">
+            <div class="cards_customer1">
                 <div class="vector">
-                    <img src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
-                    <img src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
                 </div>
-                <span class="customer_name">Slamet Wijayya</span>
-                <span class="card_desi">CEO Tokped</span>
-                <span class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</span>
+                <p class="customer_name">Slamet Wijayya</p>
+                <p class="card_desi">CEO Tokped</p>
+                <p class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</p>
                 <div class="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
