--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -275,9 +275,41 @@
                     <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
                     <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
                 </div>
-                <p class="customer_name">Slamet Wijayya</p>
-                <p class="card_desi">CEO Tokped</p>
-                <p class="card_para">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</p>
+                <p class="customer_name">Turman Tasim</p>
+                <p class="card_desi">CEO Sickuy</p>
+                <p class="card_para">I am very satisfied with web hosting here because the service is very good, the hosting fast so the speed is quite fantastic.</p>
+                <div class="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                </div>
+            </div>
+            <div class="cards_customer1">
+                <div class="vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
+                </div>
+                <p class="customer_name">Turman Tasim</p>
+                <p class="card_desi">CEO Sickuy</p>
+                <p class="card_para">I am very satisfied with web hosting here because the service is very good, the hosting fast so the speed is quite fantastic.</p>
+                <div class="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                    <img src="./assets/Icons/Star.svg" alt="star">
+                </div>
+            </div>
+            <div class="cards_customer1">
+                <div class="vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector.svg" alt="Vector">
+                    <img class="vector1" src="./assets/Icons/vuesax/bulk/Vector-1.svg" alt="Vector-1">
+                </div>
+                <p class="customer_name">Turman Tasim</p>
+                <p class="card_desi">CEO Sickuy</p>
+                <p class="card_para">I am very satisfied with web hosting here because the service is very good, the hosting fast so the speed is quite fantastic.</p>
                 <div class="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
                     <img src="./assets/Icons/Star.svg" alt="star">
@@ -287,7 +319,48 @@
                 </div>
             </div>
         </div>
-        <div class="scrollbar"></div>
+    </div>
+
+    <div class="footer">
+        <h2>Sign Up for as much hosting and domain as you want for $20.99/year</h2>
+        <div class="footer_card">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="E-mail Address">
+            <input type="text" placeholder="Password">
+            <button>Sign Up</button>
+        </div>
+        <div class="line1"></div>
+        <div class="footer_list">
+            <ul class="company">
+                <li>Company</li>
+                <li>About us</li>
+                <li>Contact us</li>
+                <li>Carrier</li>
+                <li>Blog</li>
+            </ul>
+            <ul class="features">
+                <li>Features</li>
+                <li>Domain</li>
+                <li>Hosting</li>
+                <li>WordPress</li>
+                <li>Web Security</li>
+            </ul>
+            <ul class="help">
+                <li>Help</li>
+                <li>Payment method</li>
+                <li>Know Ledgebase</li>
+                <li>Tutorials</li>
+            </ul>
+            <ul class="social_media">
+                <li>Social Media</li>
+                <li>Instagram</li>
+                <li>Twitter</li>
+                <li>Facebook</li>
+                <li>YouTube</li>
+            </ul>
+        </div>
+        <div class="line2"></div>
+        <img class="foter_logo" src="./assets/Logo.svg" alt="Logo">
     </div>
 </body>
 </html>
