--- a/Assignments/HTML & CSS/Project 08/index.html
+++ b/Assignments/HTML & CSS/Project 08/index.html
@@ -360,7 +360,7 @@
             </ul>
         </div>
         <div class="line2"></div>
-        <img class="foter_logo" src="./assets/Logo.svg" alt="Logo">
+        <img class="footer_logo" src="./assets/Logo.svg" alt="Logo">
     </div>
 </body>
 </html>
