--- a/Assignments/HTML & CSS/Project 09/index.html
+++ b/Assignments/HTML & CSS/Project 09/index.html
@@ -17,7 +17,6 @@
   </head>
   <body>
     <div class="container">
-      <!-- <img src="./Assets/Photos/futuristic-bg.png" alt=""> -->
       <div class="navbar">
         <div class="list_nav">
           <img class="logo_nav" src="./Assets/Icons/Logo.svg" alt="Logo" />
@@ -61,17 +60,26 @@
             <h2>the most popular game about fighting and wars</h2>
             <div class="cards_game">
                 <div class="card_game">
+                  <div class="card_image">
                     <img class="img_game" src="./Assets/Photos/image 2.png" alt="game_image">
+                    <div class="blur"></div>
+                    <!-- <img class="blur" src="./Assets/Photos/image 2.png" alt="game_image"> -->
+                  </div>
                     <div class="card_info">
-                        <span>The Soldier War</span>
-                        <span>Actions</span>
-                        <div class="star">
+                      <div class="card_left">
+                        <h3>The Soldier War</h3>
+                        <p>Actions</p>
+                        <div class="stars">
                             <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
                             <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
                             <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
                             <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
                             <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
-                        </div>
+                        </div> 
+                      </div>
+                      <div class="right">
+                        <button>Download</button>
+                      </div>
                     </div>
                 </div>
             </div>
